--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Contact - Spidybase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
@@ -178,7 +180,7 @@
                                 <input type="radio" id="2" name="11" class="custom-control-input">
                                 <label class="custom-control-label" for="2">หญิง</label>
                             </div>
-                            <p class="text-warning pt-3">คุณรู้จัก Spidybase ได้อย่างไร</p>
+                            <p class="text-warning pt-3">คุณรู้จัก SpidyBase ได้อย่างไร</p>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="3" name="22" class="custom-control-input">
                                 <label class="custom-control-label" for="3">โฆษณา</label>
@@ -191,14 +193,14 @@
                                 <input type="radio" id="7" name="22" class="custom-control-input">
                                 <label class="custom-control-label" for="7">อื่นๆ</label>
                             </div>
-                            <p class="text-warning pt-3">คุณเคยใช้บริการ Cloud หรือไม่</p>
+                            <p class="text-warning pt-3">คุณคิดว่า SpidyBase มีบริการครบท้วนหรือไม่</p>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="5" name="33" class="custom-control-input">
-                                <label class="custom-control-label" for="5">เคย</label>
+                                <label class="custom-control-label" for="5">ครบ</label>
                             </div>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="6" name="33" class="custom-control-input">
-                                <label class="custom-control-label" for="6">ไม่เคย</label>
+                                <label class="custom-control-label" for="6">ไม่ครบ</label>
                             </div>
                             <p class="text-warning pt-3">กรอก E-mail ของคุณ</p>
                             <input type="email" class="form-control email" placeholder="E-mail">
