--- a/product.html
+++ b/product.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Product - Spidybase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
@@ -147,7 +149,7 @@
 
                         <i class="fas fa-desktop fa-3x"></i>
                     </a>
-                    <p class="text-dark pt-2">HTTPS</p>
+                    <p class="text-dark pt-2">Web hosting</p>
 
                 </li>
                 <li class="col nav-item">
@@ -175,21 +177,21 @@
                     <i class="fas fa-cloud fa-10x color-theme"></i>
                     <h2 class="text-center color-theme pt-2">Cloud Server</h2>
                     <p class="text-center f-20">
-                        เราได้นำ cloud server จากการบริการของเราในทุกๆที่ มาเชื่อมต่อกัน เกิดเป็นการประมวลผลขนาดใหญ่ เพื่อให้ทุกการเชื่อมต่อมีปรัสิทธิภาพ
+                        บริการ Cloud Server ให้คำปรึกษาและวางแผนค่าใช้จ่าย รวมถึงบริการติดตั้งและดูแลระบบ โดยมีความความชำนาญในการจัดทำโซลูชันให้ตอบโจทย์
+                        และครอบคลุมทุกความต้องการ พร้อมวางแผนกลยุทธ์ ออกแบบ ติดตั้ง และดูแลระบบตลอด 24 ชม. เพื่อให้คุณสามารถใช้เทคโนโลยีคลาวด์ได้อย่างมีประสิทธิภาพและคุ้มค่า
                     </p>
 
                 </div>
                 <div class="tab-pane fade pt-3" id="hosting" role="tabpanel" aria-labelledby="hosting-tab">
                     <i class="fab fa-mixcloud fa-10x color-theme"></i>
-                    <h2 class="text-center color-theme pt-2">Web Hosting</h2>
+                    <h2 class="text-center color-theme pt-2">Cloud Hosting</h2>
                     <p class="text-center f-20">
-                        Spidy base เรายังได้บริการweb hosting ที่มีประสิทธิภาพเพื่อเป็นสื่อกลางที่จะให้คุณแสดงผลหน้าเว็บไซต์ของคุณ ให้มีความเสถียร
-                        ไม่ติดขัด
+                        เราได้นำ cloud server จากการบริการของเราในทุกๆที่ มาเชื่อมต่อกัน เกิดเป็นการประมวลผลขนาดใหญ่ เพื่อให้ทุกการเชื่อมต่อมีปรัสิทธิภาพ
                     </p>
                 </div>
                 <div class="tab-pane fade pt-3" id="https" role="tabpanel" aria-labelledby="https-tab">
                     <i class="fas fa-desktop fa-10x color-theme"></i>
-                    <h2 class="text-center color-theme pt-2">HTTPS</h2>
+                    <h2 class="text-center color-theme pt-2">Web Hosting</h2>
                     <p class="text-center f-20">
                         Spidy base เรายังได้บริการweb hosting ที่มีประสิทธิภาพเพื่อเป็นสื่อกลางที่จะให้คุณแสดงผลหน้าเว็บไซต์ของคุณ ให้มีความเสถียร
                         ไม่ติดขัด
@@ -402,17 +404,17 @@
                 <li class="col-lg-4 nav-item">
                     <a class="nav-link pack" id="pack-2-tab" data-toggle="tab" href="#pack-2" role="tab" aria-controls="pack-2" aria-selected="false">
                         Student Pack 2
-                        <br>3,129 บาท/เดือน
+                        <br>899 บาท/เดือน
                     </a>
                 </li>
                 <li class="col-lg-4 nav-item">
                     <a class="nav-link pack" id="pack-2-tab" data-toggle="tab" href="#pack-3" role="tab" aria-controls="pack-3" aria-selected="false">
                         Student Pack 3
-                        <br>6,249 บาท/เดือน
+                        <br>1,299 บาท/เดือน
                     </a>
                 </li>
             </ul>
-            <div class="tab-content text-dark pt-4" id="nav-tabContent-pack">
+            <div class="tab-content text-dark pt-4 " id="nav-tabContent-pack">
                 <div class="tab-pane fade show package-pro text-white active" id="pack-1" role="tabpanel" aria-labelledby="pack-1-tab">
                     <h5>แพ็กเกจเริ่มต้นสำหรับผู้ที่ต้องการทดลองใช้ cloud server และมีความรู้พื้นฐานด้าน server
                     </h5>
