--- a/contact.html
+++ b/contact.html
@@ -193,17 +193,21 @@
                                 <input type="radio" id="7" name="22" class="custom-control-input">
                                 <label class="custom-control-label" for="7">อื่นๆ</label>
                             </div>
-                            <p class="text-warning pt-3">คุณคิดว่า SpidyBase มีบริการครบท้วนหรือไม่</p>
+                            <p class="text-warning pt-3">คุณคิดว่า SpidyBase มีสิ่งที่คุณมองหาหรือไม่</p>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="5" name="33" class="custom-control-input">
-                                <label class="custom-control-label" for="5">ครบ</label>
+                                <label class="custom-control-label" for="5">มี</label>
                             </div>
                             <div class="custom-control custom-radio custom-control-inline">
                                 <input type="radio" id="6" name="33" class="custom-control-input">
-                                <label class="custom-control-label" for="6">ไม่ครบ</label>
+                                <label class="custom-control-label" for="6">ไม่มี</label>
+
+
                             </div>
+
+                            <input type="text" class="form-control email" placeholder="ระบุ">
                             <p class="text-warning pt-3">กรอก E-mail ของคุณ</p>
-                            <input type="email" class="form-control email" placeholder="E-mail">
+                            <input type="email" class="form-control email " placeholder="E-mail">
                             <div class="form-check pt-3 pb-3">
                                 <input class="form-check-input" type="checkbox">
                                 <label class="form-check-label">
