--- a/product.html
+++ b/product.html
@@ -421,8 +421,10 @@
                     <div class="row pt-3 text-left">
                         <div class="col-md-4">
                             <ul>
-                                <li>สามารถควบคุมผ่าน Browser</li>
-                                <li>พื้นที่จัดเก็บข้อมูล 20 GB (สามารถเพิ่มพื้นที่จัดเก็บ ภายหลังได้)</li>
+                                <li>
+                                    <i class="fa fa-fw fa-terminal color-white"></i>สามารถควบคุมผ่าน Browser</li>
+                                <li>
+                                    <i class="fa fa-fw fa-database color-white"></i>พื้นที่จัดเก็บข้อมูล 15 GB (สามารถเพิ่มพื้นที่จัดเก็บ ภายหลังได้)</li>
                             </ul>
                         </div>
                         <div class="col-md-8 line-grid">
@@ -455,8 +457,12 @@
                     <div class="row pt-3 text-left">
                         <div class="col-md-4">
                             <ul>
-                                <li>สามารถควบคุมผ่าน Browser</li>
-                                <li>พื้นที่จัดเก็บข้อมูล 20 GB (สามารถเพิ่มพื้นที่จัดเก็บ ภายหลังได้)</li>
+                                <li>
+                                    <i class="fa fa-fw fa-terminal color-white"></i>สามารถควบคุมผ่าน Browser</li>
+                                <li>
+                                    <i class="fa fa-fw fa-database color-white"></i>พื้นที่จัดเก็บข้อมูล 20 GB (สามารถเพิ่มพื้นที่จัดเก็บ ภายหลังได้)</li>
+                                <li>
+                                    <i class="fa fa-fw fa-cog color-white"></i>สามารถปรับแต่งการทำงานได้</li>
                             </ul>
                         </div>
                         <div class="col-md-8 line-grid">
@@ -475,8 +481,7 @@
                                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-12 col-lg-6">
-                                หากคุณเป็นมือใหม่ในการใช้ Cloud Server วีดีโอนี้ จะช่วยให้คุณเข้าใจเกี่ยวกับ Cloud มากขึ้น และการเลือก Solution ให้เหมาะกับ
-                                งานของคุณ
+                                วีดีโอนี้ จะช่วยให้คุณใช้งานบริการ Cloud ของเราได้ง่ายขึ้น และการเลือก Solution ให้เหมาะกับ งานของคุณ
                                 <button type="button" class="btn btn-primary btn-lg btn-block bg-theme mt-5">สร้าง</button>
                             </div>
 
@@ -489,8 +494,12 @@
                     <div class="row pt-3 text-left">
                         <div class="col-md-4">
                             <ul>
-                                <li>สามารถควบคุมผ่าน Browser</li>
-                                <li>พื้นที่จัดเก็บข้อมูล 20 GB (สามารถเพิ่มพื้นที่จัดเก็บ ภายหลังได้)</li>
+                                <li>
+                                    <i class="fa fa-fw fa-terminal color-white"></i>สามารถควบคุมผ่าน Browser</li>
+                                <li>
+                                    <i class="fa fa-fw fa-database color-white"></i>พื้นที่จัดเก็บข้อมูล 50 GB (สามารถเพิ่มพื้นที่จัดเก็บ ภายหลังได้)</li>
+                                <li>
+                                    <i class="fa fa-fw fa-cog color-white"></i>สามารถปรับแต่งการทำงานได้</li>
                             </ul>
                         </div>
                         <div class="col-md-8 line-grid">
@@ -509,8 +518,7 @@
                                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-12 col-lg-6">
-                                หากคุณเป็นมือใหม่ในการใช้ Cloud Server วีดีโอนี้ จะช่วยให้คุณเข้าใจเกี่ยวกับ Cloud มากขึ้น และการเลือก Solution ให้เหมาะกับ
-                                งานของคุณ
+                                วีดีโอนี้เป็น เป็นวีดีโอที่รวบรวมการทำงานของแต่ละ Solution ของเราไว้ที่นี้ และการปรับแต่ง ให้คุณสามารถใช้งาน ได้ง่าย
                                 <button type="button" class="btn btn-primary btn-lg btn-block bg-theme mt-5">สร้าง</button>
                             </div>
 
