--- a/product.html
+++ b/product.html
@@ -477,7 +477,7 @@
                         </div>
                         <div class="row pt-5">
                             <div class="col-md-12 col-lg-6 ">
-                                <iframe width="100%" height="315" src="https://www.youtube.com/embed/MFv0AlOqcoQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
+                                <iframe width="100%" height="315" src="https://www.youtube.com/embed/Wx2FDyvt0gI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
                                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-12 col-lg-6">
@@ -514,7 +514,7 @@
                         </div>
                         <div class="row pt-5">
                             <div class="col-md-12 col-lg-6 ">
-                                <iframe width="100%" height="315" src="https://www.youtube.com/embed/MFv0AlOqcoQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
+                                <iframe width="100%" height="315" src="https://www.youtube.com/embed/ahdH8eTydWY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
                                     allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             </div>
                             <div class="col-md-12 col-lg-6">
